--- a/src/input.css
+++ b/src/input.css
@@ -8,7 +8,7 @@
 @layer components {
     /* navbar main element */
     .cs-header {
-        @apply h-20 border-b-4 border-cs-red-main md:border-0;
+        @apply h-20 border-b-4 border-cs-red-main md:border-0 max-w-[1500px];
     }
 
     /* navbar container */
